crates/vexor-compiler/tests/golden/error/input/list_range.vx
val xs = []
val ys = [1,3..10]
// expected a ','
val zs = [1,2,3..10]
export Circle(10)
